--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -32,7 +32,7 @@ a:focus {
 }
 
 .content a:visited {
-  text-decoration-color: #f6e05e;
+  text-decoration-color: var(--yellow-500);
 }
 
 main h1,
