--- a/src/_includes/partials/components/news-grid-item.njk
+++ b/src/_includes/partials/components/news-grid-item.njk
@@ -3,7 +3,7 @@
     <p class="metadata">
         By {{ item.data.author if item.data.author else 'IDRC Team' }}
         <span class="separator" aria-hidden="true">&middot;</span>
-        <time datetime="{{ item.data.date | w3DateFilter }}" class="dt-published">{{ item.data.date | dateFilter }}</time>
+        <time datetime="{{ item.data.date | isoDate }}" class="dt-published">{{ item.data.date | formatDate }}</time>
     </p>
     {% if item.data.excerpt %}
     <p class="small">{{ item.data.excerpt | safe }}</p>
