--- a/src/_includes/partials/components/post-excerpt.njk
+++ b/src/_includes/partials/components/post-excerpt.njk
@@ -1,4 +1,4 @@
 <div class="entry">
     <h3><a href="{{ item.url }}">{{ item.data.title }}</a></h3>
-    <p>Published <time datetime="{{ item.data.date | w3DateFilter }}" class="dt-published">{{ item.data.date | dateFilter }}</time></p>
+    <p>Published <time datetime="{{ item.data.date | isoDate }}" class="dt-published">{{ item.data.date | formatDate }}</time></p>
 </div>
