fix: resolve netlify-plugin-checklinks errors (resolves #98)

--- a/src/_includes/partials/components/section.njk
+++ b/src/_includes/partials/components/section.njk
@@ -35,7 +35,7 @@
                     {% for item in collections.news | limit(2) %}
                     {% include 'partials/components/post-excerpt.njk' %}
                     {% endfor %}
-                    <p><a href="/news/">View all</a></p>
+                    <p><a href="/about/news/">View all</a></p>
                 {% else %}
                     <p>No news items found.</p>
                 {% endif %}
