fix: resolve news links from single news items

--- a/src/_includes/layouts/single--news.njk
+++ b/src/_includes/layouts/single--news.njk
@@ -2,4 +2,4 @@
 
 {% set pageType = 'single single--news' %}
 {% set postType = 'News' %}
-{% set postTypeUrl = '/news/' %}
+{% set postTypeUrl = '/about/news/' %}
