fix: update CSS path

--- a/src/admin.njk
+++ b/src/admin.njk
@@ -20,7 +20,7 @@ permalink: '/admin/index.html'
   <script src="/admin/templates.js"></script>
   <script src="/admin/previews.js" type="text/babel"></script>
   <script>
-    CMS.registerPreviewStyle('/css/idrc.css')
+    CMS.registerPreviewStyle('/assets/css/idrc.css')
   </script>
 </body>
 </html>
