fix: update manifest paths

--- a/src/manifest.njk
+++ b/src/manifest.njk
@@ -7,18 +7,18 @@ permalink: "/manifest.webmanifest"
   "description": "{{ site.description }}",
   "icons": [
     {
-      "src": "/images/icon-192.png",
+      "src": "/assets/images/icon-192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/images/icon-maskable.png",
+      "src": "/assets/images/icon-maskable.png",
       "type": "image/png",
       "sizes": "853x853",
       "purpose": "any maskable"
     },
     {
-      "src": "/images/icon-512.png",
+      "src": "/assets/images/icon-512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
