feat: integrating UIO enactor styles

--- a/src/_includes/partials/global/scripts.njk
+++ b/src/_includes/partials/global/scripts.njk
@@ -1,2 +1,2 @@
-<script type="text/javascript" src="/lib/infusion/infusion-uio.min.js"></script>
+{% uioScripts %}
 <script type="text/javascript" src="/assets{{ assets['/scripts/app.js'] }}" defer></script>
