--- a/src/assets/styles/pages/_projects-tools.scss
+++ b/src/assets/styles/pages/_projects-tools.scss
@@ -1,5 +1,5 @@
 .page--projects-and-tools .hr {
-  border-bottom-color: var(--indigo-500);
+  border-bottom-color: var(--fl-fgColor, var(--indigo-500));
 }
 
 .page--projects-and-tools .project,
