--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -44,7 +44,7 @@
         {% endblock %}
     </head>
     <body class="{{ pageType }}">
-        {% include "partials/global/uio.njk" %}
+        {% uioTemplate %}
         {% include "partials/global/header.njk" %}
         <main>
             {% block content %}
@@ -52,15 +52,28 @@
         </main>
         {% include "partials/global/footer.njk" %}
         <script>
-        var path = "/";
-        fluid.uiOptions.prefsEditor(".flc-prefsEditor-separatedPanel", {
-            terms: {
-                "templatePrefix": path + "lib/infusion/src/framework/preferences/html",
-                "messagePrefix": path + "lib/infusion/src/framework/preferences/messages"
-            },
-            "tocTemplate": path + "lib/infusion/src/components/tableOfContents/html/TableOfContents.html",
-            "tocMessage": path + "lib/infusion/src/framework/preferences/messages/tableOfContents-enactor.json"
-        });
+            fluid.uiOptions(".flc-prefsEditor-separatedPanel", {
+                preferences: [
+                    "fluid.prefs.lineSpace",
+                    "fluid.prefs.textFont",
+                    "fluid.prefs.contrast",
+                    "fluid.prefs.enhanceInputs",
+                    "fluid.prefs.syllabification"
+                ],
+                auxiliarySchema: {
+                    terms: {
+                        templatePrefix: "/lib/infusion/src/framework/preferences/html",
+                        messagePrefix: "/lib/infusion/src/framework/preferences/messages"
+                    },
+                    "fluid.prefs.syllabification": {
+                        enactor: {
+                            terms: {
+                                patternPrefix: "/lib/infusion/src/lib/hypher/patterns"
+                            }
+                        }
+                    }
+                }
+            });
         </script>
         <script src="https://identity.netlify.com/v1/netlify-identity-widget.js" defer></script>
     </body>
