--- a/src/_includes/partials/global/stylesheets.njk
+++ b/src/_includes/partials/global/stylesheets.njk
@@ -1,6 +1,4 @@
 <link href="/assets{{ assets['/styles/app.css'] }}" rel="stylesheet" />
-<link rel="stylesheet" type="text/css" href="/lib/infusion/src/lib/normalize/css/normalize.css" />
-<link rel="stylesheet" type="text/css" href="/lib/infusion/src/framework/core/css/fluid.css" />
-<link rel="stylesheet" type="text/css" href="/lib/infusion/src/framework/preferences/css/Enactors.css" />
-<link rel="stylesheet" type="text/css" href="/lib/infusion/src/framework/preferences/css/PrefsEditor.css" />
-<link rel="stylesheet" type="text/css" href="/lib/infusion/src/framework/preferences/css/SeparatedPanelPrefsEditor.css" />
+<link href="/lib/infusion/src/framework/preferences/css/Enactors_base.css" rel="stylesheet">
+<link href="/lib/infusion/src/framework/preferences/css/PrefsEditor.css" rel="stylesheet">
+<link href="/lib/infusion/src/framework/preferences/css/SeparatedPanelPrefsEditor.css" rel="stylesheet">
