--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -4,37 +4,39 @@
 @use "sass:math";
 
 body {
-  background: var(--indigo-100);
-  color: var(--black);
+  background: var(--fl-bgColor, var(--indigo-100));
+  color: var(--fl-fgColor, var(--black));
   display: flex;
   flex-direction: column;
-  font-family: var(--ff-sans);
+  font-family: var(--fl-font-family, var(--ff-sans));
   font-size: var(--step-0);
   font-weight: var(--fw-normal);
   justify-content: flex-start;
-  line-height: 1.5;
+  line-height: calc(1.5 * var(--fl-lineSpace-factor, 1));
   min-height: 100vh;
 }
 
 small,
 .small {
   font-size: var(--step--1);
-  line-height: 1.6;
+  line-height: calc(1.6 * var(--fl-lineSpace-factor, 1));
 }
 
 a {
-  font-family: var(--ff-display);
+  color: var(--fl-linkColor);
+  font-family: var(--fl-font-family, var(--ff-display));
   text-decoration: underline;
 }
 
 a:hover,
 a:focus {
-  background: var(--accent, var(--yellow-500));
+  background: var(--fl-linkColor, var(--accent, var(--yellow-500)));
+  color: var(--fl-bgColor, currentColor);
   outline: none;
 }
 
 .content a:visited {
-  text-decoration-color: var(--yellow-500);
+  text-decoration-color: var(--fl-linkColor, var(--yellow-500));
 }
 
 main h1,
@@ -89,7 +91,7 @@ blockquote {
   }
 
   li {
-    line-height: math.div(24, 16);
+    line-height: calc(math.div(24, 16) * var(--fl-lineSpace-factor, 1));
   }
 
   li + li {
@@ -97,7 +99,7 @@ blockquote {
   }
 
   ul li::before {
-    background-color: var(--grey-200);
+    background-color: var(--fl-bgColor, var(--grey-200));
     border-radius: 50%;
     content: "";
     display: inline-block;
@@ -115,7 +117,7 @@ blockquote {
 
 @each $name, $color in $colors {
   .section.section--bg-#{$name} {
-    background: $color;
+    background: var(--fl-bgColor, $color);
   }
 }
 
@@ -131,6 +133,6 @@ blockquote {
 
 @each $name, $color in $colors {
   .section.section--fg-#{$name} {
-    color: $color;
+    color: var(--fl-fgColor, $color);
   }
 }
