--- a/src/assets/styles/base/_typography.scss
+++ b/src/assets/styles/base/_typography.scss
@@ -4,34 +4,34 @@
 
 h1,
 .h1 {
-  font-family: var(--ff-serif);
+  font-family: var(--fl-font-family, var(--ff-serif));
   font-size: var(--step-4);
   font-weight: var(--fw-black);
-  line-height: 1.3;
+  line-height: calc(1.3 * var(--fl-lineSpace-factor, 1));
 }
 
 h2,
 .h2 {
-  font-family: var(--ff-serif);
+  font-family: var(--fl-font-family, var(--ff-serif));
   font-size: var(--step-3);
   font-weight: var(--fw-black);
-  line-height: 1.3;
+  line-height: calc(1.3 * var(--fl-lineSpace-factor, 1));
 }
 
 h3,
 .h3 {
-  font-family: var(--ff-display);
+  font-family: var(--fl-font-family, var(--ff-display));
   font-size: var(--step-2);
   font-weight: var(--fw-semibold);
-  line-height: 1.3;
+  line-height: calc(1.3 * var(--fl-lineSpace-factor, 1));
 }
 
 h4,
 .h4 {
-  font-family: var(--ff-display);
+  font-family: var(--fl-font-family, var(--ff-display));
   font-size: var(--step-1);
   font-weight: var(--fw-semibold);
-  line-height: 1.3;
+  line-height: calc(1.3 * var(--fl-lineSpace-factor, 1));
 }
 
 h1 + *,
