--- a/src/assets/styles/components/_button.scss
+++ b/src/assets/styles/components/_button.scss
@@ -3,9 +3,13 @@
 // -----------------------------------------------------------------------------
 button {
   -webkit-appearance: none;
+  background-color: var(--fl-buttonBgColor);
+  color: var(--fl-buttonFgColor);
 }
 
 button:hover,
 button:focus {
+  background-color: var(--fl-buttonFgColor);
+  color: var(--fl-buttonBgColor);
   outline: none;
 }
