--- a/src/assets/styles/components/_nav--secondary.scss
+++ b/src/assets/styles/components/_nav--secondary.scss
@@ -5,7 +5,7 @@
   position: relative;
 
   .wrapper {
-    background: var(--indigo-200);
+    background: var(--fl-bgColor, var(--indigo-200));
     margin-left: calc(-1 * var(--gutter));
     padding: rem(40) var(--gutter);
     width: calc(100% + (2 * var(--gutter)));
@@ -14,7 +14,7 @@
 
 .menu--secondary a {
   align-items: center;
-  border-bottom: rem(1) solid var(--black);
+  border-bottom: rem(1) solid var(--fl-linkColor, var(--black));
   display: block;
   display: flex;
   flex-direction: row;
@@ -24,15 +24,15 @@
 
   &:hover,
   &:focus {
-    background: var(--indigo-800);
+    background: var(--fl-linkColor, var(--indigo-800));
     border-bottom-color: transparent;
-    box-shadow: calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--indigo-800), var(--gutter) rem(-1) 0 rem(1) var(--indigo-800);
-    color: var(--white);
+    box-shadow: calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800)), var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800));
+    color: var(--fl-bgColor, var(--white));
   }
 
   &:active {
-    background: var(--indigo-500);
-    box-shadow: calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--indigo-500), var(--gutter) rem(-1) 0 rem(1) var(--indigo-500);
+    background: var(--fl-bgColor, var(--indigo-500));
+    box-shadow: calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-bgColor, var(--indigo-500)), var(--gutter) rem(-1) 0 rem(1) var(--fl-bgColor, var(--indigo-500));
   }
 
   &::after {
@@ -61,19 +61,19 @@
 
   &[aria-current="page"],
   &[data-parent="true"] {
-    border-bottom-color: var(--indigo-500);
-    box-shadow: inset 0 rem(-1) 0 0 var(--indigo-500);
+    border-bottom-color: var(--fl-linkColor, var(--indigo-500));
+    box-shadow: inset 0 rem(-1) 0 0 var(--fl-bgColor, var(--indigo-500));
     font-weight: var(--fw-bold);
 
     &:hover,
     &:focus {
       border-bottom-color: transparent;
-      box-shadow: calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--indigo-800), var(--gutter) rem(-1) 0 rem(1) var(--indigo-800);
+      box-shadow: calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800)), var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800));
     }
 
     &:active {
       border-bottom-color: transparent;
-      box-shadow: calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--indigo-500), var(--gutter) rem(-1) 0 rem(1) var(--indigo-500);
+      box-shadow: calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-fgColor, var(--indigo-500)), var(--gutter) rem(-1) 0 rem(1) var(--fl-fgColor, var(--indigo-500));
     }
   }
 }
@@ -89,7 +89,7 @@
     }
 
     .wrapper {
-      box-shadow: rem(9) rem(9) 0 0 var(--indigo-500);
+      box-shadow: rem(9) rem(9) 0 0 var(--fl-fgColor, var(--indigo-500));
       margin-left: 0;
       width: 100%;
     }
