--- a/src/assets/styles/pages/_news-ideas.scss
+++ b/src/assets/styles/pages/_news-ideas.scss
@@ -20,7 +20,7 @@
   }
 
   .entry .hr {
-    border-bottom-color: var(--indigo-500);
+    border-bottom-color: var(--fl-fgColor, var(--indigo-500));
   }
 
   .entry .metadata {
@@ -31,18 +31,18 @@
 
 .page--news {
   .entry {
-    border-top: rem(3) solid var(--indigo-500);
+    border-top: rem(3) solid var(--fl-fgColor, var(--indigo-500));
     padding-top: rem(24);
   }
 }
 
 .page--ideas {
   main > article header {
-    background: var(--yellow-500);
+    background: var(--fl-bgColor, var(--yellow-500));
   }
 
   .entry .thumbnail {
-    border-top: rem(2) solid var(--indigo-500);
+    border-top: rem(2) solid var(--fl-fgColor, var(--indigo-500));
     height: auto;
     margin-bottom: rem(28);
     width: 100%;
@@ -74,10 +74,10 @@
 @include breakpoint-up(md) {
   .entries--featured {
     h3 {
-      font-family: var(--ff-serif);
+      font-family: var(--fl-font-family, var(--ff-serif));
       font-size: var(--step-2);
       font-weight: var(--fw-black);
-      line-height: 1.25;
+      line-height: calc(1.25 * var(--fl-lineSpace-factor, 1));
 
       a {
         font-family: inherit;
