--- a/src/assets/styles/pages/_team.scss
+++ b/src/assets/styles/pages/_team.scss
@@ -1,7 +1,7 @@
 
 .page--team {
   .person {
-    border-top: rem(4) solid var(--indigo-500);
+    border-top: rem(4) solid var(--fl-fgColor, var(--indigo-500));
     margin: 0;
     padding-top: rem(24);
 
@@ -29,6 +29,10 @@
     .link--email svg {
       display: inline-block;
       margin-right: rem(4);
+
+      path {
+        fill: currentColor;
+      }
     }
   }
 
