--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -44,6 +44,9 @@
         {% endblock %}
     </head>
     <body class="{{ pageType }}">
+        {# Due to https://bugs.webkit.org/show_bug.cgi?id=127102 we need to access the SVG filter from an embedded SVG
+        instead of an external one. #}
+        {% include "svg/filters.svg" %}
         {% uioTemplate %}
         {% include "partials/global/header.njk" %}
         <main>
